--- a/app/views/super_hero.erb
+++ b/app/views/super_hero.erb
@@ -1,1 +1,18 @@
-
+<h1>Create a Team and Heroes!</h1>
+  <form method="POST" action="/teams">
+    <p>Team Name: <input type="text" name="team[name]"></p>
+    <p>Team Motto: <input type="text" name="team[motto]"></p>
+    <h1>Hero 1</h1>
+    <p>Hero's Name: <input type="text" id="member1_name" name="team[heroes][][name]"></p>
+    <p>Hero's Power: <input type="text" id="member1_power" name="team[heroes][][power]"></p>
+    <p>Hero's Biography: <input type="text" id="member1_bio" name="team[heroes][][bio]"></p>
+    <h1>Hero 2</h1>
+    <p>Hero's Name: <input type="text" id="member2_name" name="team[heroes][][name]"></p>
+    <p>Hero's Power: <input type="text" id="member2_power" name="team[heroes][][power]"></p>
+    <p>Hero's Biography: <input type="text" id="member2_bio" name="team[heroes][][bio]"></p>
+    <h1>Hero 3</h1>
+    <p>Hero's Name: <input type="text" id="member3_name" name="team[heroes][][name]"></p>
+    <p>Hero's Power: <input type="text" id="member3_power" name="team[heroes][][power]"></p>
+    <p>Hero's Biography: <input type="text" id="member3_bio" name="team[heroes][][bio]"></p>
+    <input type="submit" name="submit" id="Submit" value="submit">
+  </form>
